--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,12 @@
     border-radius: 10px;
 }
 
+.card-img-top {
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 15%;
+}
+
+section {
+    margin-top: 20px;
+}
