--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,19 @@
     border-radius: 10px;
 }
 
-.card-img-top {
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 15%;
-}
-
 section {
     margin-top: 20px;
+}
+
+.objectives {
+    display: flex;
+    flex-direction: row;
+}
+
+.objectives > div {
+    flex: 1;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
