Add: What it should not be page boilerplate + navbar styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,11 @@ section {
     justify-content: center;
     align-items: center;
 }
+
+.active {
+    font-weight: bold;
+}
+
+a:hover {
+    font-weight: bold;
+}
