--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@
 :root {
     --primary-color: rgb(73, 73, 73);
     --secondary-color: lightgrey;
-    --primary-font: 'Convergence', sans-serif,
-        --secondary-font: 'Noto Sans', sans-serif,
+    --primary-font: 'Convergence', sans-serif;
+    --secondary-font: 'Noto Sans', sans-serif;
 }
 
 /* Fonts */
@@ -15,7 +15,6 @@
 
 .noto-sans-body {
     font-family: "Noto Sans", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
